--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.linminitools.mysync">
+    package="com.linminitools.myrsync">
 
     <permission
         android:name="android.permission.INTERACT_ACROSS_USERS_FULL"
@@ -21,7 +21,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+        android:fullBackupContent="@xml/backup_descriptor">
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true">
@@ -29,15 +30,13 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
-
-                <category android:name="com.linminitools.mysync" />
+                <category android:name="com.linminitools.myrsync" />
             </intent-filter>
         </receiver>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.linminitools.myrsync.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -48,48 +47,45 @@
         <activity android:name=".Scheduler" />
         <activity
             android:name=".editConfig"
-            android:label="@string/edit_config"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="Edit Configuration"
+            android:parentActivityName=".tab2"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linminitools.mysync.MainActivity" />
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".editSched"
-            android:label="@string/edit"
+            android:label="Edit Scheduler Settings"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linminitools.mysync.MainActivity" />
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".addConfig"
             android:label="@string/title_activity_add_config"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".tab2"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linminitools.mysync.MainActivity" />
+                android:value=".MainActivity" />
         </activity>
-        <activity android:name=".addScheduler" />
+        <activity
+            android:name=".addScheduler"
+            android:label="Create a Scheduler"
+            android:parentActivityName=".tab3"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linminitools.mysync.MainActivity" />
+                android:value=".MainActivity" />
         </activity>
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linminitools.mysync.MainActivity" />
-        </activity>
+
     </application>
 
 </manifest>
