--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,13 +25,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         android:fullBackupContent="@xml/backup_descriptor">
+
+        <service
+            android:name=".rsyncJobScheduler"
+            android:permission="android.permission.BIND_JOB_SERVICE" >
+        </service>
+
+
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
+                <action android:name="android.intent.action.RUN" />
                 <category android:name="com.linminitools.myrsync" />
             </intent-filter>
         </receiver>
@@ -48,6 +57,7 @@
         <activity
             android:name=".editConfig"
             android:label="Edit Configuration"
+            android:windowSoftInputMode="stateHidden"
             android:parentActivityName=".tab2"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <meta-data
@@ -56,6 +66,7 @@
         </activity>
         <activity
             android:name=".editSched"
+            android:windowSoftInputMode="stateHidden"
             android:label="Edit Scheduler Settings"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
@@ -66,6 +77,7 @@
         <activity
             android:name=".addConfig"
             android:label="@string/title_activity_add_config"
+            android:windowSoftInputMode="stateHidden"
             android:parentActivityName=".tab2"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <meta-data
@@ -75,6 +87,7 @@
         <activity
             android:name=".addScheduler"
             android:label="Create a Scheduler"
+            android:windowSoftInputMode="stateHidden"
             android:parentActivityName=".tab3"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         <activity
