--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.linminitools.myrsync"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 5
-        versionName "0.5"
+        versionCode 7
+        versionName "0.7"
 
     }
 
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.firebase:firebase-appindexing:16.0.2'
+    //implementation 'com.google.firebase:firebase-appindexing:16.0.2'
 
 
 }
