--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     //implementation 'com.google.firebase:firebase-appindexing:16.0.2'
 
 
