--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,10 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     //implementation 'com.google.firebase:firebase-appindexing:16.0.2'
 
-
+    //tasker plugin dependencies
+    implementation 'com.twofortyfouram:android-annotation:[2.0.1,3.0['
+    implementation 'com.twofortyfouram:android-assertion:[1.1.1,2.0['
+    implementation 'com.twofortyfouram:android-plugin-api-for-locale:[1.0.1,2.0.0['
+    implementation 'com.twofortyfouram:android-plugin-client-sdk-for-locale:[4.0.2,5.0['
+    implementation 'com.twofortyfouram:android-spackle:[2.0.0,3.0['
 }
